        Reviewed by Dave Hyatt.

http://bugs.webkit.org/show_bug.cgi?id=13174
        line-height in font shorthand does not override a previously stated line-height property

        Make sure line-height is calculated against definite font-size and
        uses the last set line-height, ie. directly or through font shorthand.



Canonical link: https://commits.webkit.org/18086@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21667 268f45cc-cd09-0410-ab3c-d52691b4dbfc