WebCore/css/cssstyleselector.h
@@ -224,6 +224,7 @@ class StyledElement;
         RenderStyle::PseudoId pseudoStyle;
         FrameView *view;
         Frame *frame;
+        CSSValue* m_lineHeightValue;
         const Settings *settings;
         bool fontDirty;
         bool isXMLDoc;
